[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapy"
version = "0.2.0"
authors = [{name = "Ennio dos Santos"}]
description = "Lyapunov Exponent Analisys Package"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]
